# MatBot

./: .gitignore  README.md  requirements.txt
MatBot/matBot/: Img2Txt.py  README.md  functions.py  main.py  nlp.py  pyproject.toml  requirements.txt  user_data.json
MatBot/matBot/src/matbot/: __init__.py
MatBot/server/: app.py
MatBot/server/Embed-all/: chroma.sqlite3  chunks.pkl  embed_pdf.py  embed_pdf_txt.py  metadata.pkl
MatBot/server/Embed-all-Act/: chunks.pkl  metadata.pkl
MatBot/server/Embed-all-Act/chroma_index/: chroma.sqlite3
MatBot/server/Embed-all-Act/chroma_index/8b607c96-35de-4a9e-8c2c-32bfa5b740b3/: index_metadata.pickle
MatBot/server/Embed-all/chroma_index/: chroma.sqlite3
MatBot/server/Embed-all/chroma_index/98e0730a-3bf6-4211-934d-34684d0f33f9/: index_metadata.pickle
data/DatasetMatlab/: 1.txt
