[project]
name = "matbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[server]
fileWatcherType = "none"
watchFileSystem = "watchfiles"